# rust-bootcamp-projects

./: .gitignore  Cargo.toml
0_basics/: README.md
1_concepts/: Cargo.toml  README.md
1_concepts/1_1_default_clone_copy/: Cargo.toml
2_idioms/: Cargo.toml  README.md
3_ecosystem/: Cargo.toml  README.md  images.json
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml  links.txt
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/btreee_function_macro/: Cargo.toml
3_ecosystem/3_2_macro/btreee_function_macro/src/: lib.rs
3_ecosystem/3_2_macro/src/: main.rs
3_ecosystem/3_2_macro/tests/: btree_function_macro_test.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: format_spec.pest  main.rs
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs
3_ecosystem/src/: main.rs
4_backend/: Cargo.toml  README.md
4_backend/4_1_db/: Cargo.toml
4_backend/4_1_db/migrations/: 20230829153359_initial_tables.sql
4_backend/4_1_db/src/: constants.rs  main.rs  models.rs
4_backend/4_1_db/src/commands/: role.rs  user.rs
4_backend/4_1_db/src/repositories/defs/: role.rs  user.rs
4_backend/4_2_http/: Cargo.toml
4_backend/4_2_http/api/: Cargo.toml
4_backend/4_2_http/api/src/: lib.rs
4_backend/4_2_http/src/: main.rs  models.rs
4_backend/4_2_http/src/commands/: role.rs  user.rs
4_backend/4_2_http/src/repositories/defs/: role.rs  user.rs
4_backend/4_2_http/src/repositories/impls/: postgres.rs
4_backend/4_3_api/: .env  Cargo.toml
4_backend/4_3_api/migrations/: 20230829153359_initial_tables.sql
4_backend/4_3_api/src/: main.rs  models.rs
4_backend/4_3_api/src/commands/: role.rs  user.rs
4_backend/4_3_api/src/repositories/defs/: role.rs  user.rs
4_backend/4_3_api/src/repositories/impls/: postgres.rs
4_backend/migrations/: 20230902192340_initial_tables.sql
4_backend/src/: constants.rs  graphql.rs  main.rs  models.rs
4_backend/src/graphql/: models.rs  mutation.rs  query.rs  schema.rs
4_backend/src/graphql/mutation/: user.rs
4_backend/src/graphql/query/: user.rs
4_backend/src/repositories/defs/: user.rs
4_backend/src/repositories/impls/: postgres.rs
4_backend/src/utils/: auth.rs
(+24 files in other folders)
