[package]
name = "step_3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
config = "0.13.3"
serde = { version = "1.0.186", features = ["derive"] }
image = "0.24.7"
url = "2.4.0"
anyhow = "1.0.75"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
sanitise-file-name = "1.0.0"
num_cpus = "1.16.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
