[package]
name = "step_4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-graphql-axum = "6.0.4"
async-graphql = "6.0.4"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.47"
anyhow = "1.0.75"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
async-trait = "0.1.73"
bcrypt = "0.15.0"
serde = { version = "1.0.186", features = ["derive"] }
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
dotenv = "0.15.0"
chrono = "0.4.26"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
