[package]
name = "step_3_9"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
config = "0.13.3"
url = { version = "2.4.0", features = ["serde"] }
serde = { version = "1.0.186", features = ["derive"] }
humantime-serde = "1.1.1"
log = { version = "0.4.20", features = ["serde"] }
